library updates